# app/controllers/api/v1/reference_sections_controller.rb
@@ -1,0 +1,11 @@
+module Api::V1
+  class ReferenceSectionsController < Api::ApiController
+    def index
+      super ReferenceSection
+    end
+
+    def show
+      super ReferenceSection
+    end
+  end
+end
